amend index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>배포하기</title>
+    <title>덕성멋사 2020</title>
+    <link rel='stylesheet' href='static/index.css'/>
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <!--fonts -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
-<body>
-    <h1>배포 테스트</h1>
-    <img src='https://t1.daumcdn.net/cfile/tistory/99D9E4355E666FBA06' alt='이두희 대장님'>
+
+<body class="container">
+    
+    <header>
+
+        <img class='banner' src='static/likelionds.png' alt='header'>
+    </header>
+
+    <main>
+        <h2 class='title quote'>"열정 가득한 당신을 기다립니다."</h2>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+
+        <h2 class='title'>선생님 소개</h2>
+        <div class='row tutors'>
+            <div class="col card" width=''>
+                <img class="card-img-top" src="static/pic1.png" alt="강수지">
+                <div class="card-body">
+                  <span class="card-text name">강수지</span>
+                  <span class="card-text job">대표</span>
+                  <p class="card-text description">IT미디어공학과 17'</p>                  
+                </div>
+            </div>
+            <div class="col card">
+                <img class="card-img-top" src="static/pic3.png" alt="김예진">
+                <div class="card-body">
+                  <span class="card-text name">김예진</span>
+                  <span class="card-text job"></span>
+                  <p class="card-text description">사회학과 18'</p>                  
+                </div>
+            </div>
+            <div class="col card">
+                <img class="card-img-top" src="static/pic4.png" alt="이은정">
+                <div class="card-body">
+                  <span class="card-text name">이은정</span>
+                  <span class="card-text job"></span>
+                  <p class="card-text description">철학과 16'</p>                  
+                </div>
+            </div>
+            <div class="col card">
+                <img class="card-img-top" src="static/pic2.png" alt="이태림">
+                <div class="card-body">
+                  <span class="card-text name">이태림</span>
+                  <span class="card-text job"></span>
+                  <p class="card-text description">IT미디어공학과 17'</p>                  
+                </div>
+            </div>
+        </div>
+
+        <h2 class='title contacts'>Keep in touch with us</h2>
+        <div class='contacts'>
+            <a href='https://www.instagram.com/likelion_ds/'>
+                <img class='contacts logo' src='static/instagram.png'>
+            </a>
+            <a href='https://ko-kr.facebook.com/likelion.ds/'>
+                <img class='contacts logo' src='static/facebook.png'>
+            </a>
+            <a href='https://github.com/ds-likelion-2020'>
+                <img class='contacts logo' src='static/github.png'>
+            </a>
+        </div>
+
+
+
+    </main>
+
+    <footer>
+        <img class='logo' src='static\basiclogo_E_H_W.png' alt='likelion logo'>
+        <p>Copyright ⓒ 2020 덕성여대 멋쟁이사자처럼 All rights reserved.</p>
+    </footer>
 </body>
 </html>
