amend index.html

--- a/index.html
+++ b/index.html
@@ -19,51 +19,43 @@
 <body class="container">
     
     <header>
-
         <img class='banner' src='static/likelionds.png' alt='header'>
     </header>
 
     <main>
-        <h2 class='title quote'>"열정 가득한 당신을 기다립니다."</h2>
-        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-
-        <h2 class='title'>선생님 소개</h2>
+        <h2 class='title'>TUTORS</h2>
         <div class='row tutors'>
-            <div class="col card" width=''>
+            <div class="col-sm">
                 <img class="card-img-top" src="static/pic1.png" alt="강수지">
                 <div class="card-body">
                   <span class="card-text name">강수지</span>
-                  <span class="card-text job">대표</span>
-                  <p class="card-text description">IT미디어공학과 17'</p>                  
+                  <p class="card-text description">대표, IT미디어공학과 17'</p>                  
                 </div>
             </div>
-            <div class="col card">
+            <div class="col-sm">
                 <img class="card-img-top" src="static/pic3.png" alt="김예진">
                 <div class="card-body">
                   <span class="card-text name">김예진</span>
-                  <span class="card-text job"></span>
                   <p class="card-text description">사회학과 18'</p>                  
                 </div>
             </div>
-            <div class="col card">
+            <div class="col-sm">
                 <img class="card-img-top" src="static/pic4.png" alt="이은정">
                 <div class="card-body">
                   <span class="card-text name">이은정</span>
-                  <span class="card-text job"></span>
                   <p class="card-text description">철학과 16'</p>                  
                 </div>
             </div>
-            <div class="col card">
+            <div class="col-sm">
                 <img class="card-img-top" src="static/pic2.png" alt="이태림">
                 <div class="card-body">
                   <span class="card-text name">이태림</span>
-                  <span class="card-text job"></span>
                   <p class="card-text description">IT미디어공학과 17'</p>                  
                 </div>
             </div>
         </div>
 
-        <h2 class='title contacts'>Keep in touch with us</h2>
+        <h2 class='title contacts'>Keep in touch</h2>
         <div class='contacts'>
             <a href='https://www.instagram.com/likelion_ds/'>
                 <img class='contacts logo' src='static/instagram.png'>
