add title index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body class="container">
     
     <header>
+        <h1>*8기 스터디 연습용 페이지입니다.*</h1>
         <img class='banner' src='static/likelionds.png' alt='header'>
     </header>
 
