--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- 언어 : 한국어 -->
+<html lang="ko-kr">
 <head>
+    <!-- 인코딩 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 페이지 title -->
     <title>덕성멋사 2020</title>
+    <!-- css -->
     <link rel='stylesheet' href='static/index.css'/>
-    <!-- CSS only -->
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <!--fonts -->
-
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body class="container">
     
     <header>
+        <!-- 제목 -->
         <h1>*8기 스터디 연습용 페이지입니다.*</h1>
         <img class='banner' src='static/likelionds.png' alt='header'>
     </header>
 
     <main>
+
+        <!-- 선생님 소개 시작 -->
         <h2 class='title'>TUTORS</h2>
         <div class='row tutors'>
             <div class="col-sm">
@@ -55,22 +60,30 @@
                 </div>
             </div>
         </div>
+        <!-- 선생님 소개 끝 -->
 
+
+        <!-- sns 주소 시작  -->
         <h2 class='title contacts'>Keep in touch</h2>
         <div class='contacts'>
+            <!-- 인스타그램 -->
             <a href='https://www.instagram.com/likelion_ds/'>
                 <img class='contacts logo' src='static/instagram.png'>
             </a>
+            <!-- 페이스북 -->
             <a href='https://ko-kr.facebook.com/likelion.ds/'>
                 <img class='contacts logo' src='static/facebook.png'>
             </a>
+            <!-- 유투브 -->
             <a href='https://github.com/ds-likelion-2020'>
+                <img class='contacts logo' src='static/youtube.png'>
+            </a>
+            <!-- github -->
+            <a href='https://youtu.be/6EWhdLZLiiI'>
                 <img class='contacts logo' src='static/github.png'>
             </a>
         </div>
-
-
-
+        <!-- sns 주소 끝 -->
     </main>
 
     <footer>
