--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <header>
         <!-- 제목 -->
         <h1>*8기 스터디 연습용 페이지입니다.*</h1>
+        <h2>노윤진의 수정을 거쳤습니다.</h2>
         <img class='banner' src='static/likelionds.png' alt='header'>
     </header>
 
@@ -35,28 +36,28 @@
                 <img class="card-img-top" src="static/pic1.png" alt="강수지">
                 <div class="card-body">
                   <span class="card-text name">강수지</span>
-                  <p class="card-text description">대표, IT미디어공학과 17'</p>                  
+                  <p class="card-text description">대표, IT미디어공학과 17학번</p>                  
                 </div>
             </div>
             <div class="col-sm">
                 <img class="card-img-top" src="static/pic3.png" alt="김예진">
                 <div class="card-body">
                   <span class="card-text name">김예진</span>
-                  <p class="card-text description">사회학과 18'</p>                  
+                  <p class="card-text description">사회학과 18학번</p>                  
                 </div>
             </div>
             <div class="col-sm">
                 <img class="card-img-top" src="static/pic4.png" alt="이은정">
                 <div class="card-body">
                   <span class="card-text name">이은정</span>
-                  <p class="card-text description">철학과 16'</p>                  
+                  <p class="card-text description">철학과 16학번</p>                  
                 </div>
             </div>
             <div class="col-sm">
                 <img class="card-img-top" src="static/pic2.png" alt="이태림">
                 <div class="card-body">
                   <span class="card-text name">이태림</span>
-                  <p class="card-text description">IT미디어공학과 17'</p>                  
+                  <p class="card-text description">IT미디어공학과 17학번</p>                  
                 </div>
             </div>
         </div>
