--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     </header>
 
     <main>
-
+        <!-- 수업 -->
+        <h2 class='session'>SESSION</h2>
+        <h2 class='study'>STUDY</h2>
+        <h2 class='homework'>HOMEWORK</h2>
         <!-- 선생님 소개 시작 -->
         <h2 class='title'>TUTORS</h2>
         <div class='row tutors'>
